spade-tests/src/snapshots/spade_tests__wordlength_inference__simple_multiple_addition_aaia.snap
---
source: spade-tests/src/wordlength_inference.rs
---
fn f(a: int<4>) -> int<0> {
  a + a + a + a
}
entity main(clk: clock, rst: bool) -> int<0> { f(1) }


error: The wordlength isn't what we infered it to - inference got 2 bits and you claimed 0 bits
  ┌─ testinput:4:48
  │
4 │ entity main(clk: clock, rst: bool) -> int<0> { f(1) }
  │                                                ^^^^ Here 2 bits were infered

error: The wordlength isn't what we infered it to - inference got 6 bits and you claimed 2 bits
  ┌─ testinput:2:3
  │
2 │   a + a + a + a
  │   ^^^^^^^^^^^^^ Here 6 bits were infered


